fix card overflow text

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -47,4 +47,8 @@
   font-family: "Inter", Arial, sans-serif;
   font-weight: 900;
   font-size: 24px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: calc(100% - 40px);
 }
